Prepared view to show recieved data
Added table to display data
Added explanation field for reference

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -33,7 +33,32 @@
 
             <section>
                 <strong>Form Results:</strong>
-                <div id="results"></div>
+                <div id="results">
+				<table width="200" border="1">
+	<tbody>
+		<tr>
+			<td>score:</td>
+			<td id="score-result"> </td>
+		</tr>
+		<tr>
+			<td>agreement:</td>
+			<td id="agreement-result"> </td>
+		</tr>
+		<tr>
+			<td>subjectivity:</td>
+			<td id="subjectivity-result"> </td>
+		</tr>
+		<tr>
+			<td>confidence:</td>
+			<td id="confidence-result"> </td>
+		</tr>
+		<tr>
+			<td>irony:</td>
+			<td id="irony-result"> </td>
+		</tr>
+	</tbody>
+</table>
+</div>
             </section>
         </main>
 
