change to asnyc function
server side needs to call an async

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -49,9 +49,9 @@
 
             <section>
                 <h2>Form Results:</h2>
-				<div id="result-mes">No results to be shown. Paste an article or other text in the form above and then hit "submit"</div>
+				<div id="result-mes">No results to be shown. Paste an article or other text in the form above and then hit "submit".</div>
                 <div id="results">
-				<table width="200" border="1">
+				<table>
 					<tbody>
 						<tr>
 							<td>score:</td>
