--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,13 +3,6 @@
     <head>
         <meta charset="utf-8">
         <title>Test</title>
-<!--
-		<link rel="stylesheet" href="/styles/resets.css">
-        <link rel="stylesheet" href="/styles/base.css">
-        <link rel="stylesheet" href="/styles/header.css">
-        <link rel="stylesheet" href="/styles/form.css">
-        <link rel="stylesheet" href="/styles/footer.css">
--->
     </head>
 
     <body>
@@ -49,7 +42,7 @@
 
             <section>
                 <h2>Form Results:</h2>
-				<div id="result-mes">No results to be shown. Paste an article or other text in the form above and then hit "submit".</div>
+				<div id="results-mes">No results to be shown. Paste an article or other text in the form above and then hit "submit".</div>
                 <div id="results">
 				<table>
 					<tbody>
