--- a/src/client/styles/resets.scss
+++ b/src/client/styles/resets.scss
@@ -8,12 +8,12 @@
 }
 
 html, div, span, applet, object, iframe,
-h1, h3, h4, h5, h6, p, blockquote, pre,
+h1, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
-dl, dt, dd, ol, ul, li,
+dl, dt, dd, ol,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
@@ -33,12 +33,10 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 
-ol, ul {
-	list-style: none;
-}
 blockquote, q {
 	quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
@@ -49,7 +47,4 @@ table {
 	border-spacing: 0;
 	border: 0;
 	width: 33%;
-}
-ul {
-    list-style-type: none;
 }
